# bestandskonferenz

./: pyproject.toml
.github/workflows/: deploy.yml
apps/: 2019-absolut.csv  2021-absolut.csv  2022-absolut.csv  2024-absolut.csv  dashboard.py
apps/public/: 2019-kummulativ.csv  2021-kummulativ.csv  2022-kummulativ.csv  2023-kummulativ.csv  2024-kummulativ.csv
bestandskonferenz/apps/: 1.5.0  1.6.0  2018-absolut.csv  2024-absolut.csv  bestelldaten.csv  dashboard.py  systematik
bestandskonferenz/apps/public/: 2018-kummulativ.csv  2020-absolut.csv  2020-kummulativ.csv  2022-absolut.csv  2023-absolut.csv  bestelldaten_2023.csv
bestandskonferenz/notebooks/: 2017-absolut.csv
notebooks/: 2020-absolut.csv  2021-absolut.csv
notebooks/public/: 2017-kummulativ.csv
scripts/: build.py
