[project]
name = "bestandskonferenz"
version = "0.1.0"
description = ""
authors = [
    {name = "André Wendler",email = "andre.wendler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo (>=0.10.17,<0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
